[project]
name = "730-dash"
version = "0.1.0"
description = ""
authors = [
    {name = "T8KNaps",email = "jordan.l.lindsey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "730_dash", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
